# tt-boxing

./: .clinerules  .gitignore  .pre-commit-config.yaml  PROJECT_RULES.md  pyproject.toml
refactor/projects/punch_classification/: pyproject.toml  todo.md
refactor/projects/punch_classification/src/: eval_prauc.py
refactor/projects/punch_classification/src/config/: train_config.py
refactor/projects/punch_classification/src/core/: dataset.py  scheduler.py  trainer.py  transforms.py
refactor/projects/punch_classification/src/scripts/: eval.py  eval_prauc.py  export.py  prepare_data.py  split_video.py  train.py
refactor/projects/punch_classification/src/utils/: eval_utils.py  train_utils.py
